fix: replace String.isBlank() with trim().isEmpty() for Java 8 compatibility
Agent-Logs-Url: https://github.com/Tomo-2209/NEA/sessions/14b19a0a-e1c3-4c72-b5cc-912029bdf776

Co-authored-by: Tomo-2209 <266694414+Tomo-2209@users.noreply.github.com>